[gd_scene load_steps=8 format=3 uid="uid://ghiim2lkqkbe"]

[ext_resource type="Script" path="res://Scripts/propertyPanel.gd" id="1_jagoj"]
[ext_resource type="Texture2D" uid="uid://bv6151ukf6yx3" path="res://Asset/木板.png" id="2_p0ilg"]
[ext_resource type="Texture2D" uid="uid://cjuiym6vktbwn" path="res://Asset/ui/钱财.png" id="2_yh8r3"]
[ext_resource type="Texture2D" uid="uid://dr424n1qw7y1o" path="res://Asset/ui/人心.png" id="3_2c26y"]
[ext_resource type="FontFile" uid="uid://qv74ebpr4i31" path="res://Asset/Font/VonwaonBitmap-16px.ttf" id="4_3lm5q"]
[ext_resource type="Theme" uid="uid://bklmr3xmk4m5u" path="res://global_theme.tres" id="5_6gtlr"]
[ext_resource type="Texture2D" uid="uid://dkdsrxwnvrdkc" path="res://Asset/ui/战力.png" id="6_abtct"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jagoj")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 14.0
offset_top = 33.0
offset_right = 465.0
offset_bottom = 347.0
scale = Vector2(0.71, 0.71)
texture = ExtResource("2_p0ilg")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 31.0
offset_right = 622.0
offset_bottom = 452.0
scale = Vector2(0.71, 0.71)
texture = ExtResource("2_p0ilg")
expand_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 40.0
offset_top = 33.0
offset_right = 437.0
offset_bottom = 324.0
theme_override_constants/margin_left = -5
theme_override_constants/margin_right = -5
theme_override_constants/margin_bottom = -3

[node name="ColorRect" type="ColorRect" parent="MarginContainer2"]
custom_minimum_size = Vector2(8.155, 72.24)
layout_mode = 2
size_flags_vertical = 4
color = Color(0.79495, 0, 0.187428, 0.313726)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 40.0
offset_top = 40.0
offset_right = 334.0
offset_bottom = 259.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 22
columns = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_yh8r3")
expand_mode = 4
stretch_mode = 4

[node name="coinNum" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_3lm5q")
theme_override_font_sizes/font_size = 76
text = "00000"

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("3_2c26y")
expand_mode = 2
stretch_mode = 4

[node name="heartNum" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_3lm5q")
theme_override_font_sizes/font_size = 76
text = "00000"

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_abtct")
expand_mode = 2
stretch_mode = 4

[node name="laborNum" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_3lm5q")
theme_override_font_sizes/font_size = 76
text = "00000"

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 287.0
offset_bottom = 299.0
theme = ExtResource("5_6gtlr")

[node name="coin" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 33.0
offset_top = 31.0
offset_right = 440.0
offset_bottom = 137.0

[node name="labor" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 37.0
offset_top = 237.0
offset_right = 439.0
offset_bottom = 328.0

[node name="heart" type="Control" parent="."]
anchors_preset = 0
offset_left = 34.0
offset_top = 146.0
offset_right = 442.0
offset_bottom = 213.0
